style.css
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 12px;
    max-width: 960px;
    margin: auto;
}
h1 {
    font-size: 1.25em;
    justify-content: center;
}   

h2 {
    font-size: 1.25em;
}

h3 {
    font-size: 1.05em;
    padding-top: 0.50em;
}

main { 
    display: grid;
    grid-template-columns: 40% 60%;
    margin-top: 3em;
}
header {
    text-align: center;
    margin: auto 2em;
}

section {
    margin: auto 1em 4em 2em;
}

i {
    margin-right: .5em;
}

p {
    margin: .2em auto
}

hr {
    border: none;
    background-color: black;
    height: 2px;
}

h2, h3 {
    font-weight: 500;
    margin-bottom: 0;
}
#mainLeft {
    border-right: 1px solid lightgray;
}
.ligne {
  display: flex;
  justify-content:space-between;
  gap: 20px;
  margin-bottom: 0.2px;
}

.date {
  white-space: nowrap;
  font-weight: 500;
}

